Expand functionality of projects panel and add simple tasks

--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,11 @@ main {
     align-items: normal;
 }
 
+.project-title {
+    padding: 1rem;
+    font-size: 1.2rem;
+}
+
 .tasks {
     background-color: bisque;
     grid-row: 2 / 3;
