--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,14 @@ main {
     font-size: 1.2rem;
 }
 
+.add-task {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 10rem;
+    
+}
+
 .tasks {
     background-color: bisque;
     grid-row: 2 / 3;
